--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ go:
   - 1.8.x
   - 1.9.x
   - master
+
+before_install:
+  - go get -v github.com/golang/dep/cmd/dep
+  - dep ensure --vendor-only -v
