--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,17 @@ go:
 
 
 before_install:
-  - go get -v github.com/golang/dep/cmd/dep github.com/onsi/ginkgo/ginkgo
+  - "go get -v github.com/golang/dep/cmd/dep \
+      github.com/onsi/ginkgo/ginkgo \
+      golang.org/x/tools/cmd/cover \
+      go get github.com/mattn/goveralls"
 
 install:
   - dep ensure --vendor-only -v
 
 script:
-  - ginkgo -v -cover
+  - go test -v -covermode=count -coverprofile=coverage.out
+  - goveralls \
+    -coverprofile=coverage.out \
+    -service=travis-ci \
+    -repotoken $COVERALLS_TOKEN
