--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - "go get -v github.com/golang/dep/cmd/dep \
       github.com/onsi/ginkgo/ginkgo \
       golang.org/x/tools/cmd/cover \
-      go get github.com/mattn/goveralls"
+      github.com/mattn/goveralls"
 
 install:
   - dep ensure --vendor-only -v
