--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,4 @@ install:
 
 script:
   - go test -v -covermode=count -coverprofile=coverage.out
-  - goveralls \
-    -coverprofile=coverage.out \
-    -service=travis-ci \
-    -repotoken $COVERALLS_TOKEN
+  - goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
