--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 language: go
 
 go:
-  - 1.8.x
-  - 1.9.x
+  - 1.12
+  - 1.11
   - master
 
 
+env:
+  - GO111MODULE=on
+  
 before_install:
-  - "go get -v github.com/golang/dep/cmd/dep \
-      github.com/onsi/ginkgo/ginkgo \
+  - "go get -v github.com/onsi/ginkgo/ginkgo \
       golang.org/x/tools/cmd/cover \
       github.com/mattn/goveralls"
 
 install:
-  - dep ensure --vendor-only -v
+  - go install -v .
 
 script:
   - go test -v -covermode=count -coverprofile=coverage.out
