--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ env:
   - GO111MODULE=on
   
 before_install:
-  - "go get -v github.com/onsi/ginkgo/ginkgo \
-      golang.org/x/tools/cmd/cover \
-      github.com/mattn/goveralls"
+  - "go get -v golang.org/x/tools/cmd/cover github.com/mattn/goveralls"
 
 install:
   - go install -v .
